Closed Bug 337486 Opened 20 years ago Closed 20 years ago

mismatch between PK11_FindCertFromNickname and FindCerts

Categories

(NSS :: Libraries, defect, P2)

3.11.2
defect

Tracking

(Not tracked)

RESOLVED FIXED
3.11.3

People

(Reporter: KaiE, Assigned: KaiE)

References

Details

Attachments

(1 file)

There is a mismatch between "single cert lookup" and "multi cert lookup" functions: - PK11_FindCertFromNickname - PK11_FindCertsFromNickname "Single cert" function PK11_FindCertFromNickname has an additional section which is prefixed by the following comment: "if it wasn't found, repeat the process for email address" "Multi cert" function PK11_FindCertsFromNickname does NOT contain a corresponding section. In my test scenario, when querying an email address using FindCert, one cert was returned. However, FindCerts returned zero certs. I think this is an obvious inconsistency and should be fixed. This fix will be required for bug 337430.
Attached patch Patch v1Splinter Review
This added code is an exact copy of the corresponding section in the FindCert function. (But I adjusted the name of one variable)
Attachment #221624 - Flags: review?(rrelyea)
Let's try to get this into 3.11.2
Target Milestone: --- → 3.11.2
Assignee: nobody → kengert
Priority: -- → P2
Target Milestone: 3.11.2 → 3.11.3
Comment on attachment 221624 [details] [diff] [review] Patch v1 I doubt it will make 3.11.2. Kai, if you need quicker response on reviews be sure to CC other NSS developers. I'd like julien to eyeball this before it goes into a 3.11 branch. bob
Attachment #221624 - Flags: superreview?(julien.pierre.bugs)
Attachment #221624 - Flags: review?(rrelyea)
Attachment #221624 - Flags: review+
Comment on attachment 221624 [details] [diff] [review] Patch v1 Looks OK, very close to what the individual cer lookup function does.
Attachment #221624 - Flags: superreview?(julien.pierre.bugs) → superreview+
fixed on NSS tip
new cvs tip rev was 1.152 now fixed on 3.11 branch, too Checking in pk11cert.c; /cvsroot/mozilla/security/nss/lib/pk11wrap/pk11cert.c,v <-- pk11cert.c new revision: 1.143.2.8; previous revision: 1.143.2.7 done
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: