Bug 337486, mismatch between PK11_FindCertFromNickname and FindCerts r=rrelyea, r=julien.pierre